time compiles (with some files disabled)

--- a/ql/time/CMakeLists.txt
+++ b/ql/time/CMakeLists.txt
@@ -6,7 +6,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-FILE(GLOB sources *.cpp *.hpp)
-add_library(ql_time SHARED ${sources})
+include_directories(../..)
 
-#target_precompile_headers(ql_time PUBLIC    stdafx.h)
+include_directories(c:/dev/src/blpapi_cpp_3.15.0.1/include)
+
+find_package(boost REQUIRED preprocessor)
+include_directories(${Boost_INCLUDE_DIRS})
+find_package(fmt CONFIG REQUIRED)
+
+add_definitions(-DQL_USE_STD_SHARED_PTR)
+
+FILE(GLOB sources CONFIGURE_DEPENDS *.cpp *.hpp *.h calendars/*.cpp calendars/*.hpp daycounters/*.cpp daycounters/*.hpp)
+add_library(ql_time SHARED ${sources})
+target_link_libraries(ql_time PRIVATE fmt::fmt-header-only)
+
+target_precompile_headers(ql_time PUBLIC    stdafx.h)
