--- a/ql/time/tests/CMakeLists.txt
+++ b/ql/time/tests/CMakeLists.txt
@@ -4,9 +4,12 @@ project(qltime_tests VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Catch2 CONFIG REQUIRED)
-find_package(fmt CONFIG REQUIRED)
 find_package(cpp_rutils CONFIG REQUIRED)
+get_target_property(cpp_rutils_include cpp_rutils::cpp_rutils INTERFACE_INCLUDE_DIRECTORIES)
+list(APPEND CMAKE_MODULE_PATH "${cpp_rutils_include}/cpp_rutils/cmake")
+include(FindVcpkInstall)
+find_vcpkg_install_missing(Catch2)
+find_vcpkg_install_missing(fmt)
 find_package(blpapi)
 
 if (${blpapi_FOUND})
